--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^0.7.0",
         "zendframework/zend-expressive": "^2.0.2",
-        "rwoverdijk/assetmanager-core": "^0.0.1"
+        "wshafer/assetmanager-core": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
