--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,9 @@
         "wshafer/assetmanager-core": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "~3.0"
+        "phpunit/phpunit": "^6.0.8",
+        "squizlabs/php_codesniffer": "~3.0",
+        "phpmd/phpmd" : "@stable"
     },
     "autoload": {
         "psr-4": {
