Fix spelling of my name

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "homepage": "http://ocramius.github.com/"
         },
         {
-            "name": "Westin Shafera",
+            "name": "Westin Shafer",
             "email": "shafer_w2002@yahoo.com",
             "homepage": "https://github.com/wshafer"
         }
