--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^0.7.0",
         "zendframework/zend-expressive": "^2.0.2",
-        "wshafer/assetmanager-core": "dev-master"
+        "wshafer/assetmanager-core": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.8",
